--- a/src/Sitecore.Support.253834/App_Config/Include/zzz/Sitecore.Support.253834.config
+++ b/src/Sitecore.Support.253834/App_Config/Include/zzz/Sitecore.Support.253834.config
@@ -1,4 +1,8 @@
 <configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:set="http://www.sitecore.net/xmlconfig/set/">
   <sitecore>
+    <commands>
+      <command name="system:preview" type="Sitecore.Support.Shell.Framework.Commands.System.Preview, Sitecore.Support.253834"
+               patch:instead="*[@type='Sitecore.Shell.Framework.Commands.System.Preview,Sitecore.Kernel']" />
+    </commands>
   </sitecore>
 </configuration>
